package expresslink.model.enums;

public enum EstadoPaquete {
    PENDIENTE,
    EN_TRANSITO,
    ENTREGADO,
    CANCELADO
}
