package expresslink.model.enums;

public enum TipoTransaccion {
    INGRESO,
    GASTO
}
